tests/errors/string/byte_char_wrong_type_target_errors.sim

        fn f() {
          x: i64;
          entry:
            x = b'A';
            return
        }
        